resolved alignment issue with content item titles across all templates

--- a/themes/twenty-seventeen/assets/scss/templates/_archive.scss
+++ b/themes/twenty-seventeen/assets/scss/templates/_archive.scss
@@ -40,6 +40,28 @@
 		& > .content {
 			padding: 100px 0;
 		}
+
+		.content-item {
+	& {
+		padding-bottom: 60px;
+	}
+
+	h4 {
+		margin-bottom: 0;
+		margin-top: 30px;
+		font-size: 20px;
+		text-align: center;
+
+		@media only screen and #{$break-tablet-max} and #{$break-tablet-min} {
+			font-size: 16px;
+		}
+
+		@media only screen and #{$break-xs-max} {
+			font-size: 14px;
+		}
+	}
+}
+
 	}
 
 	& > .preface {
